// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowsersChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-auto card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0 padding-right-1"
    >
      <a
        aria-label="browsers-7-days.csv"
        href="http://www.example.com/data//browsers-7-days.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_browser"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Web Browsers
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the web browser used by the user to access the site.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-fill"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="browsers chart time filter"
          class="usa-select chart__filter margin-top-0 maxw-full text--overflow-ellipsis"
        >
          <option
            value="browsers-7-days"
          >
            Last 7 Days
          </option>
          <option
            value="browsers-30-days"
          >
            Last 30 Days
          </option>
          <option
            value="browsers-90-days"
          >
            Last 90 Days
          </option>
          <option
            value="browsers-current-year"
          >
            Current Calendar Year
          </option>
          <option
            value="browsers-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="browsers-previous-year"
          >
            Previous Calendar Year
          </option>
          <option
            value="browsers-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="text--capitalize"
  >
    <figure
      id="chart_browser"
    >
      <div
        class="data chart__bar-chart margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Chrome
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              48.5%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 49%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Safari
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              35.7%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 36%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Edge
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              8.8%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 9%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Firefox
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1.9%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 2%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Safari (in-app)
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1.9%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 2%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Samsung Internet
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1.4%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 1%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Android Webview
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 1%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Opera
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              0.2%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Amazon Silk
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              0.1%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Internet Explorer
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              0.1%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Other
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              0.3%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`BrowsersChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-auto card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0 padding-right-1"
    >
      <a
        aria-label="browsers-7-days.csv"
        href="http://www.example.com/data//browsers-7-days.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_browser"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Web Browsers
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the web browser used by the user to access the site.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-fill"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="browsers chart time filter"
          class="usa-select chart__filter margin-top-0 maxw-full text--overflow-ellipsis"
        >
          <option
            value="browsers-7-days"
          >
            Last 7 Days
          </option>
          <option
            value="browsers-30-days"
          >
            Last 30 Days
          </option>
          <option
            value="browsers-90-days"
          >
            Last 90 Days
          </option>
          <option
            value="browsers-current-year"
          >
            Current Calendar Year
          </option>
          <option
            value="browsers-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="browsers-previous-year"
          >
            Previous Calendar Year
          </option>
          <option
            value="browsers-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BrowsersChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-auto card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0 padding-right-1"
    >
      <a
        aria-label="browsers-7-days.csv"
        href="http://www.example.com/data//browsers-7-days.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_browser"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Web Browsers
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the web browser used by the user to access the site.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-fill"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="browsers chart time filter"
          class="usa-select chart__filter margin-top-0 maxw-full text--overflow-ellipsis"
        >
          <option
            value="browsers-7-days"
          >
            Last 7 Days
          </option>
          <option
            value="browsers-30-days"
          >
            Last 30 Days
          </option>
          <option
            value="browsers-90-days"
          >
            Last 90 Days
          </option>
          <option
            value="browsers-current-year"
          >
            Current Calendar Year
          </option>
          <option
            value="browsers-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="browsers-previous-year"
          >
            Previous Calendar Year
          </option>
          <option
            value="browsers-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
